fixed bug with occupation group dropdown behind other inputs

--- a/frontend/src/components/FormEditOccupInfo/styles.less
+++ b/frontend/src/components/FormEditOccupInfo/styles.less
@@ -12,6 +12,10 @@
     margin-bottom: 0;
   }
 
+  .input-group--occupation-group {
+    z-index: 3;
+  }
+
   .btn-add-info-from-another-occup {
     z-index: 0 !important;
     //border-bottom: none;
